--- a/gazpachuelo.html
+++ b/gazpachuelo.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1 class="resalt">Tony's <strong>G</strong>azpachuelo<strong>Z</strong> </h1>
+        <h1 class="resalt center">Tony's <strong>G</strong>azpachuelo<strong>Z</strong> </h1>
+        <div class="image_gaz center">
+            <img class="center" src="images/gazpachuelo.jpg" alt="imagen de gazpachuelo">
+        </div>
         <blockquote>
             "Con el tiempo, esta comida de gente humilde pasó a todas las casas de Málaga"
         </blockquote>
@@ -17,12 +20,27 @@
         <ul>
             <li>Potatoes</li>
             <li>Rice</li>
-            <li>White fish, for example: Bacalao </li>
+            <li>White fish, for example: Bacalao, Merluza </li>
             <li>Mayonnaise</li>
+            <li>shrimp</li>
+            <li>Eggs</li>
+            <li>Extra virgin olive oil</li>
+            <li>Water</li>
         </ul>
         <h2> Recipe: </h2>
         <ol>
-            <li></li>
+            <li>
+                We peel and cut the potatoes into equal-sized pieces. We peel the prawns or langoustines and set aside their bodies. We place the hake spine and head in a large pot along with the prawn or langoustine shells, the potato pieces, bay leaf, and parsley. We add the water and bring it to a boil. We simmer and skim for 30 minutes.
+
+            </li>
+            <li>
+                Meanwhile, we cut the hake into small pieces and set it aside along with the prawn or langoustine bodies. Once the broth is ready, we strain it and transfer it to another clean pot along with the potatoes, and we simmer for 10-12 minutes. We prepare a mayonnaise with the egg, oils, lemon juice, and a bit of salt, following the instructions in this recipe or using your preferred one.
+
+            </li>
+            <li>
+                We remove the pot from the heat and set aside a couple of ladles of the broth. We transfer the mayonnaise to a bowl and gradually add a small amount of the hot broth. This should be done slowly and gently stirred to prevent the mayonnaise from splitting. We repeat this process as many times as necessary to incorporate all of the reserved broth.
+                
+            </li>
         </ol>
         <h2> Nutricional information</h2>
             <dl>
